--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -90,7 +90,7 @@
 	}
 </div>
 
-<!-- Modal --> 
+<!-- Modal -->
 <div class="modal fade" id="modal_notedetail" tabindex="-1" aria-hidden="true">
 	<div class="modal-dialog">
 		<div class="modal-content">
@@ -126,28 +126,42 @@
 				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 			</div>
 			<div class="modal-body">
-				 <div class="media">
-					 <img src="https://picsum.photos/id/1005/64" class="mr-3" alt=="..." />
-					 <div class="media-body">
-						 <h5 class="mt-0">Bunyamingoksu</h5>
-						 <p>askjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdf
-							 askjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdf
-							 askjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdf
-						 </p>
-						 <div class="small text-end text-muted"><i class="fa fa-clock"></i> 24.06.2022 17:56</div>
-					 </div>
-				 </div>
-				 <div class="media">
-					 <img src="https://picsum.photos/id/1005/64" class="mr-3" alt=="..." />
-					 <div class="media-body">
-						 <h5 class="mt-0">Bunyamingoksu</h5>
-						 <p>askjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdf
-							 askjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdf
-							 askjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdf
-						 </p>
-						 <div class="small text-end text-muted"><i class="fa fa-clock"></i> 24.06.2022 17:56</div>
-					 </div>
-				 </div>x""
+				<div class="media">
+					<img src="https://picsum.photos/id/1005/64" class="mr-3" alt= ="..." />
+					<div class="media-body">
+						<h5 class="mt-0">Bunyamingoksu</h5>
+						<p>
+							askjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdf
+							askjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdf
+							askjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdf
+						</p>
+						<div class="small text-end text-muted"><i class="fa fa-clock"></i> 24.06.2022 17:56</div>
+					</div>
+				</div>
+				<div class="media">
+					<img src="https://picsum.photos/id/1005/64" class="mr-3" alt= ="..." />
+					<div class="media-body">
+						<h5 class="mt-0">Bunyamingoksu</h5>
+						<p>
+							askjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdf
+							askjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdf
+							askjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdf
+						</p>
+						<div class="small text-end text-muted"><i class="fa fa-clock"></i> 24.06.2022 17:56</div>
+					</div>
+				</div>
+				<div class="media mt-4">
+					<div class="media-body">
+						<form method="post">
+							<div class="input-group">
+								<textarea rows="2" class="form-control" placeholder="Yorumunuz"></textarea>
+								<button class="btn btn-primary" type="submit"><i class="fa fa-send "></i> Gönder</button>
+							</div>
+
+						</form>
+					</div>
+				</div>
+
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="modal"><i class="fa fa-times"></i> Kapat</button>
