--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,4 +1,8 @@
-﻿@using WebApplication_MyNoteSampleApp
+﻿@using Microsoft.AspNetCore.Http
+@using WebApplication_MyNoteSampleApp
 @using WebApplication_MyNoteSampleApp.Models
 @using MFramework.Services.FakeData
+@using WebApplication_MyNoteSampleApp.Core
+@using WebApplication_MyNoteSampleApp.Models.Entities
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
