--- a/Views/User/Details.cshtml
+++ b/Views/User/Details.cshtml
@@ -1,5 +1,7 @@
-﻿@{
-	ViewData["Title"] = "Kategori Detay";
+﻿@model User
+
+@{
+	ViewData["Title"] = "Kullanıcı Detay";
 }
 <div class="row mb-4">
 	<div class="col">
@@ -10,43 +12,43 @@
 <div class="row">
 	<div class="col-4">
 		<dl class="row">
-			<dt class="col-4">Ad Soyad</dt>
-			<dd class="col-8">@NameData.GetFullName()</dd>
+			<dt class="col-4">@Html.DisplayNameFor(m => m.FullName)</dt>
+			<dd class="col-8">@Model.FullName</dd>
 
-			<dt class="col-4">Kullanıcı Adı</dt>
-			<dd class="col-8">@NameData.GetTitleName()</dd>
+			<dt class="col-4">@Html.DisplayNameFor(m => m.Username)</dt>
+			<dd class="col-8">@Model.Username</dd>
 
-			<dt class="col-4">E-Posta Adresi</dt>
-			<dd class="col-8">@NetworkData.GetEmail()</dd>
+			<dt class="col-4">@Html.DisplayNameFor(m => m.Email)</dt>
+			<dd class="col-8">@Model.Email</dd>
 
-			<dt class="col-4">Aktif</dt>
+			<dt class="col-4">@Html.DisplayNameFor(m => m.IsActive)</dt>
 			<dd class="col-8">
-				<i class="fa fa-@(BooleanData.GetBoolean() ? "check text-success" : "times text-danger")"></i>
+				<i class="fa fa-@(Model.IsActive ? "check text-success" : "times text-danger")"></i>
 			</dd>
 
-			<dt class="col-4">Yönetici</dt>
+			<dt class="col-4">@Html.DisplayNameFor(m => m.IsAdmin)</dt>
 			<dd class="col-8">
-				<i class="fa fa-@(BooleanData.GetBoolean() ? "check text-success" : "times text-danger")"></i>
+				<i class="fa fa-@(Model.IsAdmin ? "check text-success" : "times text-danger")"></i>
 			</dd>
 
-			<dt class="col-4">Oluşturan</dt>
-			<dd class="col-8">@NameData.GetFullName()</dd>
+			<dt class="col-4">@Html.DisplayNameFor(m => m.CreatedUser)</dt>
+			<dd class="col-8">@Model.CreatedUser</dd>
 
-			<dt class="col-4">Oluşturma Tarihi</dt>
-			<dd class="col-8">@DateTimeData.GetDatetime()</dd>
+			<dt class="col-4">@Html.DisplayNameFor(m => m.CreatedAt)</dt>
+			<dd class="col-8">@Model.CreatedAt</dd>
 
-			<dt class="col-4">Güncelleyen</dt>
-			<dd class="col-8">@NameData.GetFullName()</dd>
+			<dt class="col-4">@Html.DisplayNameFor(m => m.ModifiedUser)</dt>
+			<dd class="col-8">@Model.ModifiedUser</dd>
 
-			<dt class="col-4">Güncelleme Tarihi</dt>
-			<dd class="col-8">@DateTimeData.GetDatetime()</dd>
+			<dt class="col-4">@Html.DisplayNameFor(m => m.ModifiedAt)</dt>
+			<dd class="col-8">@Model.ModifiedAt</dd>
 		</dl>
 	</div>
 </div>
 
 <div class="row">
 	<div class="col">
-		<a class="btn btn-warning btn-sm" asp-action="Edit"><i class="fa fa-edit"></i> Düzenle</a>
+		<a class="btn btn-warning btn-sm" asp-action="Edit" asp-route-id="@Model.Id"><i class="fa fa-edit"></i> Düzenle</a>
 		<a class="btn btn-secondary btn-sm" asp-action="Index"><i class="fa fa-arrow-left"></i> Listeye Dön </a>
 	</div>
 </div> 
