--- a/Views/Note/Index.cshtml
+++ b/Views/Note/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model IEnumerable<Note>
+@{
 	ViewData["Title"] = "Yazılarım";
 }
 
@@ -18,42 +19,53 @@
 		<table class="table table-hover table-striped table-sm small">
 			<thead>
 				<tr>
-					<th>Kategori</th>
-					<th>Başlık</th>
-					<th class="text-center">Taslak</th>
+					<th>@Html.DisplayNameFor(m=>m.Category.Name)</th>
+					<th>@Html.DisplayNameFor(m=>m.Title)</th>
+					<th class="text-center">@Html.DisplayNameFor(m=>m.IsDraft)</th>
 					<th class="text-center">Beğeni Adet</th>
 					<th class="text-center">Yorum Adet</th>
-					<th>Oluşturan</th>
-					<th>Oluşturma Tarihi</th>
-					<th>Güncelleyen</th>
-					<th>Güncelleme Tarihi</th>
+					<th>@Html.DisplayNameFor(m=>m.CreatedUser)</th>
+					<th>@Html.DisplayNameFor(m=>m.CreatedAt)</th>
+					<th>@Html.DisplayNameFor(m=>m.ModifiedUser)</th>
+					<th>@Html.DisplayNameFor(m=>m.ModifiedAt)</th>
 					<th></th>
 				</tr>
 			</thead>
 			<tbody>
-				@for (int i = 0; i < 10; i++)
+				@if (Model == null || Model.Count() == 0)
 				{
 					<tr>
-						<td>@NameData.GetCompanyName()</td>
-						<td>@TextData.GetSentence()</td>
-						<td class="text-center">
-							<i class="fa fa-@(BooleanData.GetBoolean() ? "check text-success" : "times text-danger")"></i>
-						</td>
-						<td class="text-center">@NumberData.GetNumber(1,100)</td>
-						<td class="text-center">@NumberData.GetNumber(1,100)</td>
-
-
-						<td>@NameData.GetFullName() </td>
-						<td>@DateTimeData.GetDatetime()</td>
-						<td>@NameData.GetFullName()</td>
-						<td>@DateTimeData.GetDatetime()</td>
-						<td class="text-center">
-							<button class="btn btn-success btn-sm" data-toggle="modal" data-target="#modal_notecomments"><i class="fa fa-comments"></i></button>
-							<a class="btn btn-warning btn-sm" asp-action="Edit"><i class="fa fa-edit"></i></a>
-							<a class="btn btn-info btn-sm" asp-action="Details"><i class="fa fa-search"></i></a>
-							<a class="btn btn-danger btn-sm" asp-action="Delete"><i class="fa fa-trash"></i></a>
+						<td colspan="7" class="text-center">
+							<div>Herhangi bir veri bulunamadı.</div>
 						</td>
 					</tr>
+				}
+				else
+				{
+					@foreach (Note note in Model)
+					{
+						<tr>
+							<td>@note.Category.Name</td>
+							<td>@note.Title</td>
+							<td class="text-center">
+								<i class="fa fa-@(note.IsDraft ? "check text-success" : "times text-danger")"></i>
+							</td>
+							<td class="text-center">@note.Likes.Count</td>
+							<td class="text-center">@note.Comments.Count</td>
+
+
+							<td>@note.CreatedUser</td>
+							<td>@note.CreatedAt</td>
+							<td>@note.ModifiedUser</td>
+							<td>@note.ModifiedAt</td>
+							<td class="text-center">
+								<button class="btn btn-success btn-sm" data-toggle="modal" data-target="#modal_notecomments"><i class="fa fa-comments"></i></button>
+								<a class="btn btn-warning btn-sm" asp-action="Edit" asp-route-id="@note.Id"><i class="fa fa-edit"></i></a>
+								<a class="btn btn-info btn-sm" asp-action="Details" asp-route-id="@note.Id"><i class="fa fa-search"></i></a>
+								<a class="btn btn-danger btn-sm" asp-action="Delete" asp-route-id="@note.Id"><i class="fa fa-trash"></i></a>
+							</td>
+						</tr>
+					}
 				}
 			</tbody>
 		</table>
