--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -54,8 +54,8 @@
 								</ul>
 							</li>
 						}
-						
-						
+
+
 						@{
 							WebApplication_MyNoteSampleApp.Business.CategoryService categoryService = new WebApplication_MyNoteSampleApp.Business.CategoryService();
 
@@ -73,18 +73,21 @@
 
 								@foreach (Category category in result.Data)
 								{
-								<li><a class="dropdown-item" asp-action="Index" asp-controller="Home" asp-route-categoryId="@category.Id"><i class="fa fa-th-list"></i> @category.Name</a></li>
-									
+									<li>
+										<a class="dropdown-item" asp-action="Index" asp-controller="Home" asp-route-categoryId="@category.Id">
+											<i class="fa fa-th-list"></i> @category.Name</a>
+									</li>
+
 								}
 
 
 							</ul>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="MostLiked"><i class="fa fa-star"></i> En Beğenilenler</a>
+							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index" asp-route-mode="mostliked"><i class="fa fa-star"></i> En Beğenilenler</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index"><i class="fa fa-th-list"></i> Son Yazılar</a>
+							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index" asp-route-mode="last"><i class="fa fa-th-list"></i> Son Yazılar</a>
 						</li>
 					</ul>
 					<ul class="navbar-nav">
