--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -88,7 +88,7 @@
 					<div class="row">
 						<div class="col">
 							<a href="#" class="btn btn-default btn-sm"><i class="far fa-star ml-2"></i> @note.Likes.Count</a>
-							<button data-bs-toggle="modal" data-bs-target="#modal_notecomments" class="btn btn-default btn-sm">
+							<button data-bs-toggle="modal" data-bs-target="#modal_notecomments" class="btn btn-default btn-sm" onclick="loadNoteComments(@note.Id)">
 								<i class="far fa-comments ml-2"></i> @note.Comments.Count
 							</button>
 						</div>
@@ -135,41 +135,7 @@
 				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 			</div>
 			<div class="modal-body">
-				<div class="media">
-					<img src="https://picsum.photos/id/1005/64" class="mr-3" alt= ="..." />
-					<div class="media-body">
-						<h5 class="mt-0">Bunyamingoksu</h5>
-						<p>
-							askjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdf
-							askjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdf
-							askjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdf
-						</p>
-						<div class="small text-end text-muted"><i class="fa fa-clock"></i> 24.06.2022 17:56</div>
-					</div>
-				</div>
-				<div class="media">
-					<img src="https://picsum.photos/id/1005/64" class="mr-3" alt= ="..." />
-					<div class="media-body">
-						<h5 class="mt-0">Bunyamingoksu</h5>
-						<p>
-							askjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdf
-							askjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdf
-							askjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdf
-						</p>
-						<div class="small text-end text-muted"><i class="fa fa-clock"></i> 24.06.2022 17:56</div>
-					</div>
-				</div>
-				<div class="media mt-4">
-					<div class="media-body">
-						<form method="post">
-							<div class="input-group">
-								<textarea rows="2" class="form-control" placeholder="Yorumunuz"></textarea>
-								<button class="btn btn-primary" type="submit"><i class="fa fa-send "></i> Gönder</button>
-							</div>
-
-						</form>
-					</div>
-				</div>
+				
 
 			</div>
 			<div class="modal-footer">
