--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -103,12 +103,8 @@
 		</div>
 	}
 </div>
+<partial name="_TemplatesPartial"/>
 
-<div class="template d-none">
-	<div class="loading">
-			<div class="text-center"><i class="fa fa-sync-alt fa-spin"></i> yükleniyor..</div>
-	</div>
-</div>
 
 <!-- Modal -->
 <div class="modal fade" id="modal_notedetail" tabindex="-1" aria-hidden="true">
