--- a/Views/Note/Index.cshtml
+++ b/Views/Note/Index.cshtml
@@ -59,7 +59,7 @@
 							<td>@note.ModifiedUser</td>
 							<td>@note.ModifiedAt</td>
 							<td class="text-center">
-								<button class="btn btn-success btn-sm" data-toggle="modal" data-target="#modal_notecomments"><i class="fa fa-comments"></i></button>
+								<button class="btn btn-success btn-sm" data-bs-toggle="modal" data-bs-target="#modal_notecomments" onclick="loadNoteComments(@note.Id)"><i class="fa fa-comments"></i></button>
 								<a class="btn btn-warning btn-sm" asp-action="Edit" asp-route-id="@note.Id"><i class="fa fa-edit"></i></a>
 								<a class="btn btn-info btn-sm" asp-action="Details" asp-route-id="@note.Id"><i class="fa fa-search"></i></a>
 								<a class="btn btn-danger btn-sm" asp-action="Delete" asp-route-id="@note.Id"><i class="fa fa-trash"></i></a>
@@ -72,6 +72,11 @@
 	</div>
 </div>
 
+
+<partial name="_TemplatesPartial"/>
+
+
+
 <div class="modal fade" id="modal_notecomments" tabindex="-1" aria-hidden="true">
 	<div class="modal-dialog modal-lg">
 		<div class="modal-content">
@@ -80,44 +85,7 @@
 				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 			</div>
 			<div class="modal-body">
-				<div class="media">
-					<img src="https://picsum.photos/id/1005/64" class="mr-3" alt= ="..." />
-					<div class="media-body">
-						<h5 class="mt-0">Bunyamingoksu</h5>
-						<p>
-							askjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdf
-							askjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdf
-							askjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdf
-						</p>
-						<div class="small text-end text-muted"><i class="fa fa-clock"></i> 24.06.2022 17:56</div>
-					</div>
-				</div>
-				<div class="media">
-					<img src="https://picsum.photos/id/1005/64" class="mr-3" alt= ="..." />
-					<div class="media-body">
-						<h5 class="mt-0">Bunyamingoksu</h5>
-						<p>
-							askjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdf
-							askjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdf
-							askjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdf
-						</p>
-						<div class="small text-end text-muted"><i class="fa fa-clock"></i> 24.06.2022 17:56</div>
-					</div>
-				</div>
-				<div class="media mt-4">
-					<div class="media-body">
-						<form method="post">
-							<div class="input-group">
-								<textarea rows="2" class="form-control" placeholder="Yorumunuz"></textarea>
-								<button class="btn btn-primary" type="submit"><i class="fa fa-send "></i> Gönder</button>
-							</div>
-
-						</form>
-					</div>
-				</div>
-
-
-
+				
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="modal"><i class="fa fa-times"></i> Kapat</button>
