--- a/Views/Note/LikedList.cshtml
+++ b/Views/Note/LikedList.cshtml
@@ -20,12 +20,12 @@
 					<th>@Html.DisplayNameFor(m=>m.Category.Name)</th>
 					<th>@Html.DisplayNameFor(m=>m.Title)</th>
 					<th class="text-center">Beğeni Adet</th>
-					<th class="text-center">Yorum Adet</th>					
+					<th class="text-center">Yorum Adet</th>
 					<th></th>
 				</tr>
 			</thead>
 			<tbody>
-			@if (Model == null || Model.Count() == 0)
+				@if (Model == null || Model.Count() == 0)
 				{
 					<tr>
 						<td colspan="7" class="text-center">
@@ -41,11 +41,11 @@
 							<td>@note.Category.Name</td>
 							<td>@note.Title</td>
 							<td class="text-center">@note.Likes.Count</td>
-							<td class="text-center">@note.Comments.Count</td>		
+							<td class="text-center">@note.Comments.Count</td>
 							<td class="text-center">
-							<button class="btn btn-success btn-sm" data-toggle="modal" data-target="#modal_notecomments"><i class="fa fa-comments"></i></button>
-							<button data-toggle="modal" data-target="#modal_notedetail" class="btn btn-secondary btn-sm"><i class="fa fa-info-circle"></i></button>
-						</td>
+								<button class="btn btn-success btn-sm" data-bs-toggle="modal" data-bs-target="#modal_notecomments" onclick="loadNoteComments(@note.Id)"><i class="fa fa-comments"></i></button>
+								<button class="btn btn-secondary btn-sm" data-bs-toggle="modal" data-bs-target="#modal_notedetail" onclick="loadNoteDetail(@note.Id)"><i class="fa fa-info-circle"></i></button>
+							</td>
 						</tr>
 					}
 				}
@@ -53,6 +53,8 @@
 		</table>
 	</div>
 </div>
+<partial name="_TemplatesPartial" />
+
 
 <div class="modal fade" id="modal_notecomments" tabindex="-1" aria-hidden="true">
 	<div class="modal-dialog modal-lg">
@@ -62,43 +64,6 @@
 				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 			</div>
 			<div class="modal-body">
-				<div class="media">
-					<img src="https://picsum.photos/id/1005/64" class="mr-3" alt= ="..." />
-					<div class="media-body">
-						<h5 class="mt-0">Bunyamingoksu</h5>
-						<p>
-							askjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskj
-							askjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskj
-							askjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskj
-						</p>
-						<div class="small text-end text-muted"><i class="fa fa-clock"></i> 24.06.2022 17:56</div>
-					</div>
-				</div>
-				<div class="media">
-					<img src="https://picsum.photos/id/1005/64" class="mr-3" alt= ="..." />
-					<div class="media-body">
-						<h5 class="mt-0">Bunyamingoksu</h5>
-						<p>
-							askjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskj
-							askjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskj
-							askjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskjhksajfdkhjasdfkhjaskhfjasjkhfkhjasdfaskj
-						</p>
-						<div class="small text-end text-muted"><i class="fa fa-clock"></i> 24.06.2022 17:56</div>
-					</div>
-				</div>
-				<div class="media mt-4">
-					<div class="media-body">
-						<form method="post">
-							<div class="input-group">
-								<textarea rows="2" class="form-control" placeholder="Yorumunuz"></textarea>
-								<button class="btn btn-primary" type="submit"><i class="fa fa-send "></i> Gönder</button>
-							</div>
-
-						</form>
-					</div>
-				</div>
-
-
 
 			</div>
 			<div class="modal-footer">
@@ -116,17 +81,7 @@
 				<button type="button" class="close" data-bs-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 			</div>
 			<div class="modal-body">
-				<p>
-					Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-					when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-				</p>
-				<p>
-					<div class="text-muted small">
-						<div class="text-end"><i class="fa fa-user"></i> Bünyamingöksu</div>
-						<div class="text-end"><i class="fa fa-clock"></i> 19.06.2022 01.25</div>
-					</div>
 
-				</p>
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal"><i class="fa fa-times"></i> Kapat</button>
