--- a/Views/Shared/_NoteCommentsPartial.cshtml
+++ b/Views/Shared/_NoteCommentsPartial.cshtml
@@ -15,7 +15,16 @@
 				<p>
 					@comment.Text
 				</p>
-				<div class="small text-end text-muted"><i class="fa fa-clock"></i> @(comment.ModifiedAt != null ? comment.ModifiedAt : comment.CreatedAt) </div>
+				<div class="small text-end text-muted">
+
+					@if(comment.UserId== userId ){
+									
+		   <span>
+			   <a href="javascript:void(0)" class="text-secondary text-decoration-none"><i class="fa fa-edit"></i> Düzenle</a>	 |  <a href="javascript:void(0)"  class="text-secondary text-decoration-none"><i class="fa fa-trash"></i> Sil</a> |</span>
+
+					}
+		
+			   <i class="fa fa-clock"></i> @(comment.ModifiedAt != null ? comment.ModifiedAt : comment.CreatedAt) </div>
 			</div>
 		</div>
 	}
