--- a/Views/Home/ProfileEdit.cshtml
+++ b/Views/Home/ProfileEdit.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
-	ViewData["Title"] = "Profil dÜZENLE";
+	ViewData["Title"] = "Profil Düzenle";
+	int userId = ViewContext.HttpContext.Session.GetInt32(Constants.UserId).Value;
 }
 
 <div class="row p-4">
@@ -9,12 +10,12 @@
 </div>
 <div class="row p-4">
 	<div class="col-3  text-center">
-		<img src="https://picsum.photos/id/1005/128" class="rounded-circle img-thumbnail" />
+		<img src="/uploads/profile_@(userId).jpg" class="rounded-circle img-thumbnail" />
 		<div class="mt-4">
-			<form method="post" enctype="multipart/form-data">
+			<form method="post" asp-action="ProfileImageSave" enctype="multipart/form-data">
 				<div>
-					<input type="file" class="form-control" />
-					<small>Lütfen sadece jpeg,jpg veya png formatında dosya yükleyiniz</small>
+					<input id="profileImage" name="profileImage" type="file" class="form-control" accept=".jpg,.jpeg" />
+					<small>Lütfen sadece jpeg,jpg formatında dosya yükleyiniz</small>
 				</div>
 				<div class="mt-3">
 					<button type="submit" class="btn btn-primary btn-sm"><i class="fa fa-upload"></i> Yükle</button>
@@ -23,26 +24,40 @@
 		</div>
 	</div>
 	<div class="col-4 offset-1">
-		<form>
+		<div class="text-danger small text-center mb-3" asp-validation-summary="All"></div>
+		@if(ViewData["SuccessMessage"] != null)
+		{
+			<div class="alert alert-success mb-3"> 
+				 @ViewData["SuccessMessage"] 
+			</div>
+		}
+		<form method="post" asp-action="ProfileInfoSave">
 			<div class="form-group mb-3">
 				<label for="fullname" class="font-weight-bold small">Ad Soyad</label>
-				<input type="text" class="form-control" id="fullname"placeholder="name surname">
+				<input type="text" class="form-control" id="fullname" placeholder="name surname">
 			</div>
 			<div class="form-group mb-3">
 				<label for="username" class="font-weight-bold small">Kullanıcı Adı</label>
-				<input type="text" class="form-control" id="username" placeholder="username" >
+				<input type="text" class="form-control" id="username" placeholder="username">
 				@*<div  class="form-text">We'll never share your email with anyone else.</div>*@
 			</div>
-			<div class="form-group mb-3"> 
+			<div class="form-group mb-3">
 				<label for="email" class="font-weight-bold small">E-posta Adresi</label>
 				<input type="email" class="form-control" id="email" placeholder="abc@mail.com">
 			</div>
+
+			<div class="text-center">
+				<button type="submit" class="btn btn-primary btn-sm"><i class="fa fa-save"></i> Kaydet</button>
+
+			</div>
+		</form>
+		<form method="post" asp-action="ProfilePasswordChange">
 			<div class="form-group mb-3">
 				<label for="pass" class="font-weight-bold small">Şifre</label>
-				<input type="password" class="form-control" id="pass" placeholder="şifre">
+				<input type="password" class="form-control" name="newPassword" id="newPassword" placeholder="şifre">
 			</div>
-			<div class="text-center" >
-			<button type="submit" class="btn btn-primary btn-sm"><i class="fa fa-save"></i> Kaydet</button>
+			<div class="text-center">
+				<button type="submit" class="btn btn-primary btn-sm"><i class="fa fa-save"></i> Kaydet</button>
 
 			</div>
 		</form>
